--- a/teacher.html
+++ b/teacher.html
@@ -23,178 +23,332 @@
     </header>
 
     <main>
-      <div class="ev-container" style="padding: 2.5rem 0 3.5rem;">
-        <h1>Teacher Dashboard</h1>
-        <p class="ev-helper-text">
-          View student profiles, award Hero Stars, post announcements and homework, and
-          reply to student questions from here.
-        </p>
-
-        <!-- STUDENTS & HERO STARS -->
-        <section class="dashboard-card">
-          <div class="card-header">Students &amp; Hero Stars</div>
-          <p class="card-subtitle">
-            Add or update students here. You can award Hero Stars for effort,
-            participation, and improvement. Students will see their total in their hub.
+      <!-- TEACHER LOGIN -->
+      <section id="teacher-login-section">
+        <div class="ev-container" style="padding:2.5rem 0 3rem;">
+          <h1>Teacher Login</h1>
+          <p class="ev-helper-text">
+            Internal dashboard for Edvengers teachers.
           </p>
 
-          <form id="students-form" style="margin-bottom: 1rem;">
-            <div class="form-field">
-              <label for="student-select">Select existing student (optional)</label>
-              <select id="student-select">
-                <option value="">-- New or type name below --</option>
-              </select>
-            </div>
+          <div class="dashboard-card">
+            <form id="teacher-login-form">
+              <div class="form-field">
+                <label for="teacher-username">Username</label>
+                <input
+                  id="teacher-username"
+                  type="text"
+                  placeholder="e.g. andy"
+                  required
+                />
+              </div>
+              <div class="form-field">
+                <label for="teacher-password">Password</label>
+                <input
+                  id="teacher-password"
+                  type="password"
+                  required
+                />
+              </div>
+              <p class="helper-text">
+                For now, this uses a simple shared password you control.
+              </p>
+              <p
+                id="teacher-login-error"
+                class="helper-text"
+                style="color:#ff6b6b; display:none;"
+              ></p>
 
-            <div class="form-field">
-              <label for="student-name">Student name</label>
-              <input
-                id="student-name"
-                type="text"
-                placeholder="e.g. Ethan Tan"
-                required
-              />
-            </div>
-
-            <div class="form-field">
-              <label for="student-level">Level (optional)</label>
-              <input
-                id="student-level"
-                type="text"
-                placeholder="e.g. P5, P6"
-              />
-            </div>
-
-            <div class="form-field">
-              <label for="student-subjects">Subjects (optional)</label>
-              <input
-                id="student-subjects"
-                type="text"
-                placeholder="e.g. P5 English, P5 Math"
-              />
-            </div>
-
-            <button type="submit" class="btn btn-primary">
-              Save / Update Student
-            </button>
-          </form>
-
-          <div id="students-list"></div>
-        </section>
-
-        <!-- ANNOUNCEMENTS & HOMEWORK -->
-        <section class="dashboard-card">
-          <div class="card-header">Announcements &amp; Homework</div>
-          <p class="card-subtitle">
-            Post weekly announcements and homework links here. Students will see them in
-            their hub.
-          </p>
-
-          <div class="dashboard-grid">
-            <!-- Announcements -->
-            <div class="card">
-              <div class="card-header">Announcements</div>
-              <form id="announcement-form">
-                <div class="form-field">
-                  <label for="announcement-title">Title</label>
-                  <input
-                    id="announcement-title"
-                    type="text"
-                    placeholder="e.g. Week 3 Update"
-                    required
-                  />
-                </div>
-                <div class="form-field">
-                  <label for="announcement-message">Message</label>
-                  <textarea
-                    id="announcement-message"
-                    rows="3"
-                    placeholder="Key reminders, lesson focus, etc."
-                    required
-                  ></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary">
-                  Post Announcement
-                </button>
-              </form>
-
-              <div id="announcement-list" style="margin-top: 1rem;"></div>
-            </div>
-
-            <!-- Homework -->
-            <div class="card">
-              <div class="card-header">Homework</div>
-              <form id="homework-form">
-                <div class="form-field">
-                  <label for="homework-title">Title</label>
-                  <input
-                    id="homework-title"
-                    type="text"
-                    placeholder="e.g. P5 English – Week 3 Practice"
-                    required
-                  />
-                </div>
-
-                <div class="form-field">
-                  <label>Links (up to 5)</label>
-                  <input
-                    id="homework-link-1"
-                    type="url"
-                    placeholder="Main link (required) – Google Form / PDF / quiz"
-                    required
-                  />
-                  <input
-                    id="homework-link-2"
-                    type="url"
-                    placeholder="Additional link 2 (optional)"
-                  />
-                  <input
-                    id="homework-link-3"
-                    type="url"
-                    placeholder="Additional link 3 (optional)"
-                  />
-                  <input
-                    id="homework-link-4"
-                    type="url"
-                    placeholder="Additional link 4 (optional)"
-                  />
-                  <input
-                    id="homework-link-5"
-                    type="url"
-                    placeholder="Additional link 5 (optional)"
-                  />
-                </div>
-
-                <div class="form-field">
-                  <label for="homework-level">Level / Subject (optional)</label>
-                  <input
-                    id="homework-level"
-                    type="text"
-                    placeholder="e.g. P5 English"
-                  />
-                </div>
-
-                <button type="submit" class="btn btn-primary">
-                  Add Homework
-                </button>
-              </form>
-
-              <div id="homework-list" style="margin-top: 1rem;"></div>
-            </div>
+              <button type="submit" class="btn btn-primary">Enter Dashboard</button>
+            </form>
           </div>
-        </section>
+        </div>
+      </section>
 
-        <!-- STUDENT QUESTIONS -->
-        <section class="dashboard-card">
-          <div class="card-header">Student Questions</div>
-          <p class="card-subtitle">
-            Questions submitted from the Student Hub will appear here. Click a student to
-            expand their conversation, then type and send your reply.
+      <!-- TEACHER DASHBOARD -->
+      <section id="teacher-dashboard-section" style="display:none;">
+        <div class="ev-container" style="padding:2.5rem 0 3.5rem;">
+          <div class="dashboard-top-row">
+            <h1>Teacher Dashboard</h1>
+            <button id="teacher-logout-btn" class="btn btn-ghost">
+              Log out
+            </button>
+          </div>
+          <p class="ev-helper-text">
+            Manage students, Hero Points, announcements, homework, and Q&A chat here.
           </p>
 
-          <div id="questions-list" class="dashboard-grid-single"></div>
-        </section>
-      </div>
+          <!-- STUDENTS & HERO POINTS -->
+          <section class="dashboard-card">
+            <div class="card-header">Students &amp; Hero Points</div>
+            <p class="card-subtitle">
+              Create / update students. Award Hero Points to specific students, by level,
+              by subject, or whole level.
+            </p>
+
+            <form id="students-form">
+              <div class="dashboard-grid">
+                <div class="form-field">
+                  <label for="student-select">Existing student</label>
+                  <select id="student-select">
+                    <option value="">-- New or select --</option>
+                  </select>
+                </div>
+
+                <div class="form-field">
+                  <label for="student-name">Student name</label>
+                  <input
+                    id="student-name"
+                    type="text"
+                    placeholder="e.g. Ethan Tan"
+                    required
+                  />
+                </div>
+
+                <div class="form-field">
+                  <label for="student-level">Level</label>
+                  <input id="student-level" type="text" placeholder="e.g. P5" />
+                </div>
+
+                <div class="form-field">
+                  <label for="student-subjects">Subjects (comma-separated)</label>
+                  <input
+                    id="student-subjects"
+                    type="text"
+                    placeholder="e.g. English, Math"
+                  />
+                </div>
+              </div>
+
+              <button type="submit" class="btn btn-primary">
+                Save / Update Student
+              </button>
+            </form>
+
+            <div class="filter-row">
+              <div class="form-field-small">
+                <label for="filter-level">Filter level</label>
+                <input id="filter-level" type="text" placeholder="e.g. P5" />
+              </div>
+              <div class="form-field-small">
+                <label for="filter-subject">Filter subject</label>
+                <input id="filter-subject" type="text" placeholder="e.g. Math" />
+              </div>
+              <button id="filter-apply" class="btn btn-small">Apply Filter</button>
+              <button id="filter-clear" class="btn btn-ghost btn-small">
+                Clear
+              </button>
+            </div>
+
+            <div id="students-list"></div>
+          </section>
+
+          <!-- ANNOUNCEMENTS & HOMEWORK -->
+          <section class="dashboard-card">
+            <div class="card-header">Announcements &amp; Homework</div>
+            <p class="card-subtitle">
+              Target announcements and homework by level and subject.
+            </p>
+
+            <div class="dashboard-grid">
+              <!-- Announcements -->
+              <div class="card">
+                <div class="card-header">Announcements</div>
+                <form id="announcement-form">
+                  <div class="form-field">
+                    <label for="announcement-title">Title</label>
+                    <input
+                      id="announcement-title"
+                      type="text"
+                      placeholder="e.g. P6 Math – Week 3 Reminder"
+                      required
+                    />
+                  </div>
+                  <div class="form-field">
+                    <label for="announcement-message">Message</label>
+                    <textarea
+                      id="announcement-message"
+                      rows="3"
+                      placeholder="Key reminder, lesson focus, etc."
+                      required
+                    ></textarea>
+                  </div>
+                  <div class="form-field">
+                    <label for="announcement-levels">Levels (comma-separated)</label>
+                    <input
+                      id="announcement-levels"
+                      type="text"
+                      placeholder="e.g. P5, P6"
+                    />
+                  </div>
+                  <div class="form-field">
+                    <label for="announcement-subjects">
+                      Subjects (comma-separated, blank = all)
+                    </label>
+                    <input
+                      id="announcement-subjects"
+                      type="text"
+                      placeholder="e.g. Math"
+                    />
+                  </div>
+                  <button type="submit" class="btn btn-primary">
+                    Post Announcement
+                  </button>
+                </form>
+
+                <div id="announcement-list" style="margin-top:1rem;"></div>
+              </div>
+
+              <!-- Homework -->
+              <div class="card">
+                <div class="card-header">Homework</div>
+                <form id="homework-form">
+                  <div class="form-field">
+                    <label for="homework-title">Title</label>
+                    <input
+                      id="homework-title"
+                      type="text"
+                      placeholder="e.g. P5 English – Week 2 Practice"
+                      required
+                    />
+                  </div>
+                  <div class="form-field">
+                    <label for="homework-description">Description (optional)</label>
+                    <textarea
+                      id="homework-description"
+                      rows="3"
+                      placeholder="Short description / instructions"
+                    ></textarea>
+                  </div>
+
+                  <div class="form-field">
+                    <label>Links (up to 5)</label>
+                    <input
+                      id="homework-link-1"
+                      type="url"
+                      placeholder="Main link (required)"
+                      required
+                    />
+                    <input
+                      id="homework-link-2"
+                      type="url"
+                      placeholder="Additional link 2 (optional)"
+                    />
+                    <input
+                      id="homework-link-3"
+                      type="url"
+                      placeholder="Additional link 3 (optional)"
+                    />
+                    <input
+                      id="homework-link-4"
+                      type="url"
+                      placeholder="Additional link 4 (optional)"
+                    />
+                    <input
+                      id="homework-link-5"
+                      type="url"
+                      placeholder="Additional link 5 (optional)"
+                    />
+                  </div>
+
+                  <div class="dashboard-grid">
+                    <div class="form-field">
+                      <label for="homework-levels">Levels (comma-separated)</label>
+                      <input
+                        id="homework-levels"
+                        type="text"
+                        placeholder="e.g. P5"
+                      />
+                    </div>
+                    <div class="form-field">
+                      <label for="homework-subjects">Subjects</label>
+                      <input
+                        id="homework-subjects"
+                        type="text"
+                        placeholder="e.g. English"
+                      />
+                    </div>
+                  </div>
+
+                  <div class="dashboard-grid">
+                    <div class="form-field">
+                      <label for="homework-posted">Posted date</label>
+                      <input id="homework-posted" type="date" />
+                    </div>
+                    <div class="form-field">
+                      <label for="homework-due">Due date</label>
+                      <input id="homework-due" type="date" />
+                    </div>
+                  </div>
+
+                  <button type="submit" class="btn btn-primary">
+                    Add Homework
+                  </button>
+                </form>
+
+                <div id="homework-list" style="margin-top:1rem;"></div>
+              </div>
+            </div>
+          </section>
+
+          <!-- CHAT -->
+          <section class="dashboard-card">
+            <div class="card-header">Student Chat</div>
+            <p class="card-subtitle">
+              Reply to student questions. Click a student to open their chat, then send
+              text or attach a photo.
+            </p>
+
+            <div class="chat-layout">
+              <aside class="chat-sidebar" id="chat-student-list">
+                <!-- list of students with last message / pending count -->
+              </aside>
+
+              <section class="chat-main">
+                <div id="chat-thread" class="chat-window"></div>
+
+                <form id="teacher-chat-form" class="chat-form">
+                  <input
+                    type="hidden"
+                    id="teacher-chat-student-id"
+                  />
+
+                  <div class="chat-row-inputs">
+                    <label class="chat-label">
+                      <span>Your message</span>
+                      <textarea
+                        id="teacher-chat-input"
+                        rows="2"
+                        placeholder="Type your reply..."
+                        required
+                      ></textarea>
+                    </label>
+
+                    <div class="chat-attachments">
+                      <label class="file-label">
+                        📎 Photo
+                        <input
+                          type="file"
+                          id="teacher-chat-image"
+                          accept="image/*"
+                        />
+                      </label>
+                    </div>
+                  </div>
+
+                  <p id="teacher-chat-status" class="helper-text"></p>
+
+                  <div class="chat-actions">
+                    <button type="submit" class="btn btn-primary">
+                      Send reply
+                    </button>
+                  </div>
+                </form>
+              </section>
+            </div>
+          </section>
+        </div>
+      </section>
     </main>
 
     <footer class="ev-footer">
