--- a/teacher.html
+++ b/teacher.html
@@ -249,6 +249,17 @@
                 </form>
 
                 <div id="announcement-list" style="margin-top:1rem;"></div>
+<div class="teacher-section-footer">
+  <button
+    id="teacher-ann-toggle"
+    type="button"
+    class="btn btn-ghost btn-small"
+    style="display: none;"
+  >
+    Show older announcements
+  </button>
+  <span id="teacher-ann-count" class="helper-text"></span>
+</div>
               </div>
 
               <!-- Homework -->
@@ -346,6 +357,17 @@
                 </form>
 
                 <div id="homework-list" style="margin-top:1rem;"></div>
+<div class="teacher-section-footer">
+  <button
+    id="teacher-hw-toggle"
+    type="button"
+    class="btn btn-ghost btn-small"
+    style="display: none;"
+  >
+    Show older homework
+  </button>
+  <span id="teacher-hw-count" class="helper-text"></span>
+</div>
               </div>
             </div>
           </section>
