--- a/teacher.html
+++ b/teacher.html
@@ -441,6 +441,6 @@
     <script>
       document.getElementById("year").textContent = new Date().getFullYear();
     </script>
-    <script src="app-teacher.js" type="module"></script>
+    <script src="app-teacher.js?v=3" type="module"></script>
   </body>
 </html>
